# abilisk-firewall

./: Cargo.toml  abilisk-fw.proto  schema.cql
abilisk-firewall-client/: Cargo.toml
abilisk-firewall-kubesync/: Cargo.toml
abilisk-firewall-kubesync/src/: main.rs
abilisk-firewall-server/: Cargo.toml
abilisk-firewall-server/src/logic/: configstate.rs  db.rs  livestate.rs  mod.rs
