[package]
name = "abilisk-firewall-kubesync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
futures = "0.3.17"
k8s-openapi = { version = "0.21.0", features = ["v1_29"] }
kube = { version = "0.88.1", features = ["runtime", "kube-client"] }
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.18"
